--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,12 @@ dependencies:
     sdk: flutter
   path_provider: ^2.1.1
   pdf: ^3.10.6
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
