--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.1.0
   path_provider: ^2.1.1
-  pdf: ^3.10.6
+  pdf: ^3.10.7
+  printing: ^5.11.1
   shared_preferences: ^2.2.2
 
 dev_dependencies:
