--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
+  image_picker: ^1.0.4
   intl: ^0.18.1
   path_provider: ^2.1.1
   pdf: ^3.10.7
