--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   google_fonts: ^6.1.0
   image_picker: ^1.0.4
   intl: ^0.18.1
+  path: ^1.8.3
   path_provider: ^2.1.1
   pdf: ^3.10.7
   printing: ^5.11.1
