--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   file_picker: ^6.1.1
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
   google_fonts: ^6.1.0
   image_picker: ^1.0.4
   intl: ^0.18.1
@@ -25,6 +26,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.1
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/hth_logo.jpg"
 flutter:
   uses-material-design: true
   assets:
